--- a/srv/http/assets/css/desktop.css
+++ b/srv/http/assets/css/desktop.css
@@ -91,7 +91,7 @@ li:not( .licover ),
 .button-webradio-new,
 .close-root,
 .coverart div,
-.covedit,
+.coveredit,
 .bkedit,
 .emptyadd i,
 .fa-arrow-left,
