--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -219,7 +219,6 @@ hr {
 }
 .infomessage,
 .infofooter {
-	display: inline-block;
 	width: fit-content;
 	max-width: 100%;
 	max-height: 800px;
@@ -227,6 +226,10 @@ hr {
 	word-wrap: break-word;
 	overflow: hidden;
 	color: var( --cg60 );
+}
+.infofooter .fa-coverart {
+	position: static;
+	width: auto;
 }
 .infomessage .fa {
 	width: 25px;
