--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -48,7 +48,7 @@
 .fa-composer:before { content: "\f558" }
 .fa-conductor:before { content: "\f559" }
 .fa-coverart:before { content: "\f59C"; position: absolute; color: var( --cw ); }
-.fa-coverart:after { content: "\f59D"; color: #000000; opacity: 0.75; }
+.fa-coverart:after { content: "\f59D"; color: #000000; opacity: 0.75; text-shadow: none; }
 .fa-coverart-refresh:before { content: "\f53D" }
 .fa-crop:before { content: "\f568" }
 .fa-date:before { content: "\f54B" }
@@ -1635,7 +1635,6 @@ i.map.disabled, .map.disabled i {
 }
 .contextmenu .fa-coverart {
 	position: relative;
-	text-shadow: none;
 }
 #infoTop .fa-coverart {
 	position: static;
