--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -954,6 +954,9 @@ i.map.disabled, .map.disabled i {
 	opacity: 0;
 }
 .map.mapshow {
+	opacity: 0.8;
+}
+.map.guide.mapshow {
 	opacity: 0.9;
 }
 #coverTR.empty {
