--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -810,7 +810,7 @@ i.map.disabled, .map.disabled i {
 	opacity: 0 !important;
 }
 .translucent {
-	opacity: 0.5 !important;
+	opacity: 0.8 !important;
 }
 #divcover {
 	margin: 0 auto;
@@ -1765,6 +1765,8 @@ i.map.disabled, .map.disabled i {
 	font-size: 30px;
 	text-align: center;
 	z-index: 112;
+	background: var( --cg );
+	border-radius: 50%;
 }
 #button-data.barshidden {
 	top: 0;
