--- a/srv/http/assets/css/desktop.css
+++ b/srv/http/assets/css/desktop.css
@@ -117,6 +117,7 @@ li:not( .licover ),
 #bar-bottom,
 #bar-top i,
 #button-coverart,
+#button-data,
 #button-library,
 #button-playlist,
 #colorcancel,
