--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -171,6 +171,7 @@ hr {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	letter-spacing: 2px;
 }
 #infoArrow {
 	position: absolute;
