--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -205,6 +205,7 @@ hr {
 	text-align: right;
 }
 #infoContent td.chk {
+	padding-right: 10px;
 	text-align: left !important;
 }
 #infoContent label i {
@@ -218,9 +219,6 @@ hr {
 	font-size: 20px;
 	width: 24px;
 	text-align: center;
-}
-#infoContent td:nth-child( 3 ) {
-	padding-left: 5px;
 }
 .infomessage,
 .infofooter {
