--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -150,6 +150,7 @@ hr {
 }
 #infoTop .imgicon img {
 	width: 30px;
+	vertical-align: -1px;
 }
 #infoX {
 	float: right;
@@ -220,8 +221,16 @@ hr {
 	width: 24px;
 	text-align: center;
 }
+#infoContent pre {
+	margin: 0;
+	padding: 0 10px;
+	text-align: left;
+	color: var( --cg60 );
+	background: none;
+}
 .infomessage,
 .infofooter {
+	width: fit-content;
 	max-height: 800px;
 	margin: 0 auto 5px;
 	word-wrap: break-word;
@@ -266,16 +275,17 @@ hr {
 	width: 100%;
 	height: 100px;
 	margin: 0 !important;
-	padding: 5px 10px;
+	padding: 0 10px;
 	border-radius: 4px;
 	border: none;
 	outline: none;
 	font-family: Inconsolata;
-	font-size: 16px;
+	font-size: 15px;
 	line-height: 20px;
 	tab-size: 4;
 	color: var( --cw );
 	background: var( --cgd );
+	resize: none;
 	overflow: hidden;
 }
 #infoContent input[type=text],
