--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -36,7 +36,7 @@
 .fa-arrow-left:before { content: "\f602" }
 .fa-arrow-right:before { content: "\f603" }
 .fa-artist:before { content: "\f556" }
-.fa-audiocd:before { content: "\f54A" }
+.fa-audiocd:before { content: "\f53A" }
 .fa-bars:before { content: "\f51C" }
 .fa-bio:before { content: "\f515" }
 .fa-bookmark:before { content: "\f550" }
@@ -51,17 +51,17 @@
 .fa-coverart:after { content: "\f59D"; color: #000000; opacity: 0.75; text-shadow: none; }
 .fa-coverart-refresh:before { content: "\f53D" }
 .fa-crop:before { content: "\f568" }
-.fa-date:before { content: "\f54B" }
+.fa-date:before { content: "\f55C" }
 .fa-dice:before { content: "\f569" }
 .fa-edit:before { content: "\f565" }
 .fa-edit-circle:before { content: "\f566" }
 .fa-eye:before { content: "\f576" }
-.fa-file-music:before { content: "\f548" }
+.fa-file-music:before { content: "\f54A" }
 .fa-file-playlist:before { content: "\f549" }
 .fa-flash:before { content: "\f567" }
 .fa-folder:before { content: "\f540" }
 .fa-folder-cascade:before { content: "\f538" }
-.fa-folder-forbid:before { content: "\f535" }
+.fa-folder-forbid:before { content: "\f537" }
 .fa-folder-open:before { content: "\f541" }
 .fa-gear:before { content: "\f509" }
 .fa-genre:before { content: "\f55A" }
@@ -74,7 +74,7 @@
 .fa-library:before { content: "\f506" }
 .fa-list-ul:before { content: "\f508"; }
 .fa-lock:before { content: "\f574"; }
-.fa-lyrics:before { content: "\f54D" }
+.fa-lyrics:before { content: "\f539" }
 .fa-microsd:before { content: "\f543" }
 .fa-minus:before { content: "\f518" }
 .fa-minus-circle:before { content: "\f563" }
@@ -107,7 +107,7 @@
 .fa-reboot:before { content: "\f521" }
 .fa-redo:before { content: "\f524" }
 .fa-refresh:before { content: "\f526" }
-.fa-refresh-library:before { content: "\f53A" }
+.fa-refresh-library:before { content: "\f536" }
 .fa-relays:before { content: "\f522" }
 .fa-reload:before { content: "\f525" }
 .fa-repeat:before { content: "\f511" }
@@ -116,7 +116,7 @@
 .fa-right:before { content: "\f607" }
 .fa-save:before { content: "\f542"}
 .fa-save-plus:before { content: "\f545"}
-.fa-screenoff:before { content: "\f539" }
+.fa-screenoff:before { content: "\f548" }
 .fa-scale-dn:before { content: "\f577" }
 .fa-scale-up:before { content: "\f578" }
 .fa-sd:before { content: "\f543" }
@@ -132,7 +132,7 @@
 .fa-stop:before { content: "\f502" }
 .fa-tag:before { content: "\f55B" }
 .fa-times:before { content: "\f51A" }
-.fa-title:before { content: "\f54C" }
+.fa-title:before { content: "\f538" }
 .fa-track:before { content: "\f50D" }
 .fa-undo:before { content: "\f523" }
 .fa-upnp:before { content: "\f591" }
@@ -140,7 +140,7 @@
 .fa-usbdrive:before { content: "\f553" }
 .fa-volume:before { content: "\f516" }
 .fa-warning:before { content: "\f562" }
-.fa-webradio:before { content: "\f55C" }
+.fa-webradio:before { content: "\f55D" }
 .fa-layer { position: absolute }
 .fa-layerlast { position: relative }
 *,
