--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -31,7 +31,7 @@
 .fa-arrow-left:before { content: "\f602" }
 .fa-arrow-right:before { content: "\f603" }
 .fa-artist:before { content: "\f556" }
-.fa-audiocd:before { content: "\f54A" }
+.fa-audiocd:before { content: "\f53A" }
 .fa-audiocdplay:before { content: "\f53C" }
 .fa-bluetooth:before { content: "\f580" }
 .fa-check:before { content: "\f51B" }
@@ -45,7 +45,6 @@
 .fa-external-link:before { content: "\f52C" }
 .fa-eye:before { content: "\f576" }
 .fa-features:before { content: "\f50B" }
-.fa-folder-cascade:before { content: "\f538" }
 .fa-folder-open:before { content: "\f541" }
 .fa-gear:before { content: "\f509" }
 .fa-gear-restore:before { content: "\f53C" }
@@ -84,17 +83,17 @@
 .fa-refresh-play:before { content: "\f53B" }
 .fa-relays:before { content: "\f522" }
 .fa-reload:before { content: "\f525" }
+.fa-reset:before { content: "\f527" }
+.fa-restore:before { content: "\f544" }
 .fa-right:before { content: "\f607" }
 .fa-save:before { content: "\f542"}
 .fa-save-circle:before { content: "\f546"}
 .fa-sd:before { content: "\f543" }
-.fa-sd-restore:before { content: "\f544" }
 .fa-search:before { content: "\f56A" }
 .fa-sliders:before { content: "\f50B" }
 .fa-snapcast:before { content: "\f592" }
 .fa-soundprofile:before { content: "\f570" }
 .fa-source:before { content: "\f52A" }
-.fa-sources:before { content: "\f538" }
 .fa-spotify:before { content: "\f593" }
 .fa-status:before { content: "\f50A" }
 .fa-system:before { content: "\f588" }
@@ -105,7 +104,7 @@
 .fa-usbdrive:before { content: "\f553" }
 .fa-volume:before { content: "\f516" }
 .fa-warning:before { content: "\f562" }
-.fa-webradio:before { content: "\f55C" }
+.fa-webradio:before { content: "\f55D" }
 .fa-wifi:before { content: "\f597" }
 .fa-wifi1:before { content: "\f598"; position: absolute; }
 .fa-wifi1:after { content: "\f599"; color: var( --cga ); }
