--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -79,7 +79,7 @@
 .fa-minus:before { content: "\f518" }
 .fa-minus-circle:before { content: "\f563" }
 .fa-mpd:before { content: "\f507" } /* fa-play-circle */
-.fa-music:before { content: "\f54C" }
+.fa-music:before { content: "\f538" }
 .fa-mute:before { content: "\f517" }
 .fa-nas:before { content: "\f551" }
 .fa-network:before { content: "\f551" }
