--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -65,7 +65,7 @@
 .fa-microsd:before { content: "\f543" }
 .fa-minus-circle:before { content: "\f563" }
 .fa-mpd:before { content: "\f582" }
-.fa-music:before { content: "\f54C" }
+.fa-music:before { content: "\f538" }
 .fa-network:before { content: "\f551" }
 .fa-networks:before { content: "\f551" }
 .fa-output:before { content: "\f52B" }
