--- a/srv/http/assets/css/addons.css
+++ b/srv/http/assets/css/addons.css
@@ -31,22 +31,21 @@
 .fa-bars:before { content: "\f51C" }
 .fa-check:before { content: "\f51B" }
 .fa-chevron-down:before { content: "\f605" }
-.fa-eye:before { content: "\f576" }
+.fa-eye:before { content: "\f56B" }
 .fa-gear:before { content: "\f509" }
 .fa-github:before { content: "\f583" }
 .fa-info-circle:before { content: "\f561" }
-.fa-input:before { content: "\f52A" }
-.fa-jigsaw:before { content: "\f50E" }
-.fa-link:before { content: "\f52C" }
+.fa-input:before { content: "\f529" }
+.fa-jigsaw:before { content: "\f50C" }
 .fa-minus-circle:before { content: "\f563" }
 .fa-plus-circle:before { content: "\f564" }
 .fa-plus-o:before { content: "\f530" }
-.fa-plus-r:before { content: "\f588" }
+.fa-plus-r:before { content: "\f590" }
 .fa-question-circle:before { content: "\f560" }
 .fa-refresh:before { content: "\f526" }
 .fa-reset:before { content: "\f527" }
-.fa-output:before { content: "\f52B" }
-.fa-source:before { content: "\f52A" }
+.fa-output:before { content: "\f52A" }
+.fa-source:before { content: "\f529" }
 .fa-times:before { content: "\f51A" }
 .fa-undo:before { content: "\f523" }
 .fa-update:before { content: "\f526" }
