--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -45,6 +45,7 @@
 .fa-folder-open:before { content: "\f541" }
 .fa-gear:before { content: "\f509" }
 .fa-gears:before { content: "\f50A" }
+.fa-github:before { content: "\f583" }
 .fa-globe:before { content: "\f575" }
 .fa-gmusic:before { content: "\f587" }
 .fa-i2saudio:before { content: "\f571" }
