--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -26,13 +26,13 @@
 }
 .fa-lg { font-size: 22px; line-height: 18px; }
 .fa-accesspoint:before { content: "\f554" }
-.fa-airplay:before { content: "\f58A" }
+.fa-airplay:before { content: "\f580" }
 .fa-album:before { content: "\f555" }
 .fa-arrow-left:before { content: "\f602" }
 .fa-arrow-right:before { content: "\f603" }
 .fa-artist:before { content: "\f556" }
-.fa-audiocd:before { content: "\f53A" }
-.fa-bluetooth:before { content: "\f580" }
+.fa-audiocd:before { content: "\f538" }
+.fa-bluetooth:before { content: "\f595" }
 .fa-check:before { content: "\f51B" }
 .fa-chevron-down:before { content: "\f605" }
 .fa-chevron-up:before { content: "\f604" }
@@ -52,8 +52,8 @@
 .fa-info-circle:before { content: "\f561" }
 .fa-lan:before { content: "\f552" }
 .fa-lastfm:before { content: "\f585" }
-.fa-lcd:before { content: "\f57A" }
-.fa-lcdchar:before { content: "\f57B" }
+.fa-lcd:before { content: "\f577" }
+.fa-lcdchar:before { content: "\f578" }
 .fa-left:before { content: "\f606" }
 .fa-library:before { content: "\f506" }
 .fa-list-ul:before { content: "\f508"; }
@@ -62,15 +62,15 @@
 .fa-microsd:before { content: "\f543" }
 .fa-minus-circle:before { content: "\f563" }
 .fa-mpd:before { content: "\f582" }
-.fa-music:before { content: "\f538" }
+.fa-music:before { content: "\f54A" }
 .fa-network:before { content: "\f551" }
 .fa-networks:before { content: "\f551" }
 .fa-output:before { content: "\f52A" }
 .fa-play:before { content: "\f503" }
 .fa-player:before { content: "\f582" }
-.fa-play-cd:before { content: "\f53B" }
+.fa-play-cd:before { content: "\f539" }
 .fa-play-circle:before { content: "\f507" }
-.fa-play-power:before { content: "\f53C" }
+.fa-play-power:before { content: "\f53A" }
 .fa-plus:before { content: "\f519" }
 .fa-plus-circle:before { content: "\f564" }
 .fa-plus-r:before { content: "\f590" }
@@ -90,7 +90,7 @@
 .fa-search:before { content: "\f56A" }
 .fa-sliders:before { content: "\f50B" }
 .fa-snapcast:before { content: "\f587" }
-.fa-soundprofile:before { content: "\f570" }
+.fa-soundprofile:before { content: "\f576" }
 .fa-source:before { content: "\f529" }
 .fa-spotify:before { content: "\f588" }
 .fa-status:before { content: "\f50A" }
@@ -98,7 +98,7 @@
 .fa-times:before { content: "\f51A" }
 .fa-transmission:before { content: "\f586" }
 .fa-undo:before { content: "\f523" }
-.fa-upnp:before { content: "\f58B" }
+.fa-upnp:before { content: "\f581" }
 .fa-usbdrive:before { content: "\f553" }
 .fa-volume:before { content: "\f516" }
 .fa-warning:before { content: "\f562" }
