--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -88,6 +88,7 @@
 .fa-save-circle:before { content: "\f546"}
 .fa-sd:before { content: "\f543" }
 .fa-search:before { content: "\f56A" }
+.fa-set0:before { content: "\f515" }
 .fa-sliders:before { content: "\f50B" }
 .fa-snapcast:before { content: "\f587" }
 .fa-soundprofile:before { content: "\f576" }
