--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -86,6 +86,7 @@
 .fa-right:before { content: "\f607" }
 .fa-save:before { content: "\f542"}
 .fa-save-circle:before { content: "\f546"}
+.fa-screenoff:before { content: "\f547" }
 .fa-sd:before { content: "\f543" }
 .fa-search:before { content: "\f56A" }
 .fa-set0:before { content: "\f515" }
