--- a/srv/http/assets/css/selectric.css
+++ b/srv/http/assets/css/selectric.css
@@ -6,6 +6,7 @@
 	margin-bottom: 11px;
 	vertical-align: middle;
 	cursor: pointer;
+	font-family: Lato, rern;
 }
 .selectric-responsive {
 	width: 100%;
