--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -201,6 +201,9 @@ head,
 #bar-bottom {
 	box-shadow: 0 0 10px 4px #000000;
 }
+#bar-bottom .active {
+	background: var( --cm );
+}
 .hide{ display: none !important; }
 a,
 a:hover {
