--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -72,7 +72,7 @@ hr {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 200%;
+	min-height: 200vh;
 	background: rgba(0, 0, 0, 0.85);
 	z-index: 106; /* #banner > #loader > # #keyboard > #infoOverlay */
 	text-align: center;
