--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -223,6 +223,7 @@ hr {
 .infomessage,
 .infofooter {
 	width: fit-content;
+	max-width: 100%;
 	max-height: 800px;
 	margin: 0 auto 5px;
 	word-wrap: break-word;
