--- a/srv/http/assets/css/desktop.css
+++ b/srv/http/assets/css/desktop.css
@@ -110,7 +110,7 @@ li:not( .licover ),
 .rs-container,
 .submenu,
 .tagicon,
-.tagname,
+.taglabel,
 #album:not( .albumgray ),
 #artist,
 #bar-bottom,
@@ -130,7 +130,7 @@ li:not( .licover ),
 #pl-manage i,
 #playlist-empty,
 #sampling i,
-#tagname,
+#taglabel,
 #time-band,
 #volume-band,
 #volume-bar-dn,
