--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -1,116 +1,5 @@
-@font-face {
-	font-family: Lato;
-	src: url( '/assets/fonts/lato-regular-webfont.woff' ) format( 'woff' ),
-		url( '/assets/fonts/lato-regular-webfont.ttf' ) format( 'truetype' );
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	src: url( '/assets/fonts/lato-light-webfont.woff' ) format( 'woff' ),
-		url( '/assets/fonts/lato-light-webfont.ttf' ) format( 'truetype' );
-	font-weight: 300;
-	font-style: normal;
-}
-@font-face {
-	font-family: Inconsolata;
-	src: url('/assets/fonts/Inconsolata.woff') format('woff'),
-		url( '/assets/fonts/Inconsolata.ttf' ) format( 'truetype' );
-	font-weight: normal;
-	font-style: normal;
-}
-.fa {
-	display: inline-block;
-	font-family: rern;
-	font-style: normal;
-}
-.fa-lg { font-size: 22px; line-height: 18px; }
-.fa-accesspoint:before { content: "\f554" }
-.fa-airplay:before { content: "\f580" }
-.fa-album:before { content: "\f555" }
-.fa-arrow-left:before { content: "\f602" }
-.fa-arrow-right:before { content: "\f603" }
-.fa-artist:before { content: "\f556" }
-.fa-audiocd:before { content: "\f538" }
-.fa-bluetooth:before { content: "\f595" }
-.fa-check:before { content: "\f51B" }
-.fa-chevron-down:before { content: "\f605" }
-.fa-chevron-up:before { content: "\f604" }
-.fa-chromium:before { content: "\f584" }
-.fa-download:before { content: "\f528" }
-.fa-edit:before { content: "\f565" }
-.fa-edit-circle:before { content: "\f566" }
-.fa-eye:before { content: "\f56B" }
-.fa-features:before { content: "\f50B" }
-.fa-folder-open:before { content: "\f541" }
-.fa-gear:before { content: "\f509" }
-.fa-gears:before { content: "\f50A" }
-.fa-github:before { content: "\f583" }
-.fa-globe:before { content: "\f575" }
-.fa-gmusic:before { content: "\f587" }
-.fa-i2saudio:before { content: "\f571" }
-.fa-info-circle:before { content: "\f561" }
-.fa-lan:before { content: "\f552" }
-.fa-lastfm:before { content: "\f585" }
-.fa-lcd:before { content: "\f577" }
-.fa-lcdchar:before { content: "\f578" }
-.fa-left:before { content: "\f606" }
-.fa-library:before { content: "\f506" }
-.fa-lock:before { content: "\f573" }
-.fa-lock-circle:before { content: "\f574" }
-.fa-microsd:before { content: "\f543" }
-.fa-minus-circle:before { content: "\f563" }
-.fa-mpd:before { content: "\f582" }
-.fa-music:before { content: "\f54A" }
-.fa-network:before { content: "\f551" }
-.fa-networks:before { content: "\f551" }
-.fa-output:before { content: "\f52A" }
-.fa-play:before { content: "\f503" }
-.fa-playback:before { content: "\f507" }
-.fa-player:before { content: "\f582" } /* mpd - bottom bar */
-.fa-playlist:before { content: "\f508"; }
-.fa-play-cd:before { content: "\f539" }
-.fa-play-power:before { content: "\f53A" }
-.fa-plus:before { content: "\f519" }
-.fa-plus-circle:before { content: "\f564" }
-.fa-plus-r:before { content: "\f590" }
-.fa-power:before { content: "\f520" }
-.fa-question-circle:before { content: "\f560" }
-.fa-reboot:before { content: "\f521" }
-.fa-redo:before { content: "\f524" }
-.fa-refresh:before { content: "\f526" }
-.fa-relays:before { content: "\f522" }
-.fa-reload:before { content: "\f525" }
-.fa-reset:before { content: "\f527" }
-.fa-restore:before { content: "\f544" }
-.fa-right:before { content: "\f607" }
-.fa-save:before { content: "\f542"}
-.fa-save-circle:before { content: "\f546"}
-.fa-screenoff:before { content: "\f547" }
-.fa-sd:before { content: "\f543" }
-.fa-search:before { content: "\f56A" }
-.fa-set0:before { content: "\f515" }
-.fa-sliders:before { content: "\f50B" }
-.fa-snapcast:before { content: "\f587" }
-.fa-soundprofile:before { content: "\f576" }
-.fa-source:before { content: "\f529" }
-.fa-spotify:before { content: "\f588" }
-.fa-status:before { content: "\f50A" }
-.fa-system:before { content: "\f590" }
-.fa-times:before { content: "\f51A" }
-.fa-transmission:before { content: "\f586" }
-.fa-undo:before { content: "\f523" }
-.fa-upnp:before { content: "\f581" }
-.fa-usbdrive:before { content: "\f553" }
-.fa-volume:before { content: "\f516" }
-.fa-warning:before { content: "\f562" }
-.fa-webradio:before { content: "\f55D" }
-.fa-wifi:before { content: "\f597" }
-.fa-wifi1:before { content: "\f598"; position: absolute; }
-.fa-wifi1:after { content: "\f599"; color: var( --cga ); }
-.fa-wifi2:before { content: "\f59A"; position: absolute; }
-.fa-wifi2:after { content: "\f59B"; color: var( --cga ); }
 .message .fa-wifi:before { font-size: 20px }
+#listwlscan .fa-lock { font-size: 16px }
 
 .menu {
 	position: absolute;
