--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1,147 +1,3 @@
- /* default color: keep single line for cmd.sh color */
-#colorreset { background-color: hsl(200,100%,35%) !important; }
-
-@font-face {
-	font-family: Lato;
-	src: url( '/assets/fonts/lato-regular-webfont.woff' ) format( 'woff' ),
-	     url( '/assets/fonts/lato-regular-webfont.ttf' ) format( 'truetype' );
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	src: url( '/assets/fonts/lato-light-webfont.woff' ) format( 'woff' ),
-	     url( '/assets/fonts/lato-light-webfont.ttf' ) format( 'truetype' );
-	font-weight: 300;
-	font-style: normal;
-}
-@font-face {
-	font-family: Inconsolata;
-	src: url('/assets/fonts/Inconsolata.woff') format('woff'),
-		url( '/assets/fonts/Inconsolata.ttf' ) format( 'truetype' );
-	font-weight: normal;
-	font-style: normal;
-}
-/* ---------------------- fontawesome mod ---------------------- */
-/* 'rern' declared in <head> for cache busting */
-.fa {
-	display: inline-block;
-	font-family: rern;
-	font-style: normal;
-}
-.fa-lg { font-size: 22px !important }
-.fa-airplay:before { content: "\f580" }
-.fa-album:before { content: "\f555" }
-.fa-albumartist:before { content: "\f557" }
-.fa-arrow-left:before { content: "\f602" }
-.fa-arrow-right:before { content: "\f603" }
-.fa-artist:before { content: "\f556" }
-.fa-audiocd:before { content: "\f538" }
-.fa-bars:before { content: "\f51C" }
-.fa-bio:before { content: "\f51D" }
-.fa-bookmark:before { content: "\f550" }
-.fa-bluetooth:before { content: "\f595" }
-.fa-bluetooth-client:before { content: "\f596" }
-.fa-brush:before { content: "\f536" }
-.fa-check:before { content: "\f51B" }
-.fa-composer:before { content: "\f558" }
-.fa-conductor:before { content: "\f559" }
-.fa-coverart:before { content: "\f593"; position: absolute; color: var( --cw ); }
-.fa-coverart:after { content: "\f594"; color: #000000; opacity: 0.75; text-shadow: none; }
-.fa-coverart-refresh:before { content: "\f53D" }
-.fa-crop:before { content: "\f568" }
-.fa-date:before { content: "\f55C" }
-.fa-dice:before { content: "\f569" }
-.fa-edit:before { content: "\f565" }
-.fa-edit-circle:before { content: "\f566" }
-.fa-eye:before { content: "\f56B" }
-.fa-file-music:before { content: "\f549" }
-.fa-file-playlist:before { content: "\f548" }
-.fa-flash:before { content: "\f567" }
-.fa-folder:before { content: "\f540" }
-.fa-folder-cascade:before { content: "\f54A" }
-.fa-folder-forbid:before { content: "\f537" }
-.fa-folder-open:before { content: "\f541" }
-.fa-gear:before { content: "\f509" }
-.fa-genre:before { content: "\f55A" }
-.fa-guide:before { content: "\f579" }
-.fa-info-circle:before { content: "\f561" }
-.fa-jigsaw:before { content: "\f50C" }
-.fa-lan:before { content: "\f552" }
-.fa-lastfm:before { content: "\f585" }
-.fa-left:before { content: "\f606" }
-.fa-library:before { content: "\f506" }
-.fa-lock:before { content: "\f574"; }
-.fa-lyrics:before { content: "\f54B" }
-.fa-microsd:before { content: "\f543" }
-.fa-minus:before { content: "\f518" }
-.fa-minus-circle:before { content: "\f563" }
-.fa-mpd:before { content: "\f507" } /* bottom bar - fa-playback */
-.fa-music:before { content: "\f54A" }
-.fa-mute:before { content: "\f517" }
-.fa-nas:before { content: "\f551" }
-.fa-network:before { content: "\f551" }
-.fa-networks:before { content: "\f551" }
-.fa-next:before { content: "\f505" }
-.fa-output:before { content: "\f52A" }
-.fa-pause:before { content: "\f504" }
-.fa-play:before { content: "\f503" }
-.fa-playback:before { content: "\f507" }
-.fa-playlist:before { content: "\f508"; }
-.fa-player:before { content: "\f582" } /* settings - mpd */
-.fa-play-plus:before { content: "\f532" }
-.fa-play-replace:before { content: "\f533" }
-.fa-plus:before { content: "\f519" }
-.fa-plus-circle:before { content: "\f564" }
-.fa-plus-o:before { content: "\f530" }
-.fa-plus-r:before { content: "\f590" }
-.fa-plus-r-nobox:before { content: "\f500" }
-.fa-power:before { content: "\f520" }
-.fa-previous:before { content: "\f501" }
-.fa-question-circle:before { content: "\f560" }
-.fa-radiofrance:before { content: "\f589" }
-.fa-radioparadise:before {content: "\f59C"; position: absolute; color: var( --cgl ); }
-.fa-radioparadise:after {content: "\f59D"; position: relative; } /* position: relative - fix order */
-.fa-random:before { content: "\f512" }
-.fa-reboot:before { content: "\f521" }
-.fa-redo:before { content: "\f524" }
-.fa-refresh:before { content: "\f526" }
-.fa-refresh-library:before { content: "\f536" }
-.fa-relays:before { content: "\f522" }
-.fa-reload:before { content: "\f525" }
-.fa-repeat:before { content: "\f511" }
-.fa-repeat-single:before { content: "\f510" }
-.fa-replace:before { content: "\f531" }
-.fa-right:before { content: "\f607" }
-.fa-save:before { content: "\f542"}
-.fa-save-plus:before { content: "\f545"}
-.fa-screenoff:before { content: "\f547" }
-.fa-scale-dn:before { content: "\f591" }
-.fa-scale-up:before { content: "\f592" }
-.fa-sd:before { content: "\f543" }
-.fa-search:before { content: "\f56A" }
-.fa-shuffle:before { content: "\f513" }
-.fa-single:before { content: "\f514" }
-.fa-sliders:before { content: "\f50B" }
-.fa-snapcast:before { content: "\f587" }
-.fa-snapclient:before { content: "\f587" }
-.fa-source:before { content: "\f529" }
-.fa-spotify:before { content: "\f588" }
-.fa-star:before { content: "\f550" }
-.fa-stop:before { content: "\f502" }
-.fa-tag:before { content: "\f55B" }
-.fa-times:before { content: "\f51A" }
-.fa-title:before { content: "\f54A" }
-.fa-track:before { content: "\f54C" }
-.fa-undo:before { content: "\f523" }
-.fa-upnp:before { content: "\f581" }
-.fa-usb:before { content: "\f553" }
-.fa-usbdrive:before { content: "\f553" }
-.fa-volume:before { content: "\f516" }
-.fa-warning:before { content: "\f562" }
-.fa-webradio:before { content: "\f55D" }
-.fa-layer { position: absolute }
-.fa-layerlast { position: relative }
 *,
 *:before,
 *:after {
@@ -513,6 +369,9 @@ i.map.disabled, .map.disabled i {
 #bar-bottom i.active {
 	background: var( --cm );
 }
+#bar-bottom .fa-mpd:before {
+	content: "\f507";
+}
 .renderer {
 	width: 100% !important;
 	background: var( --cm ) !important;
@@ -861,7 +720,7 @@ i.map.disabled, .map.disabled i {
 .cls-2,.cls-4,.cls-13 { stroke-width: 0.5px; }
 .cls-21,.cls-22,.cls-24 { stroke-width: 0.2px; }
 .cls-14,.cls-17 { stroke-linecap: round; }
-.cls-23 { fill:var(--cg70); }
+.cls-23 { fill:var(--cg60); }
 #vuneedle {
 	transform: rotate( -29.4deg);
 	transform-origin: 115px 220px;
@@ -1520,7 +1379,7 @@ i.map.disabled, .map.disabled i {
 .mode i {
 	display: inline-block;
 	text-align: center;
-	color: var( --cg70 );
+	color: var( --cg60 );
 }
 .mode i:first-of-type {
 	width: 60px;
