--- a/srv/http/assets/css/relays.css
+++ b/srv/http/assets/css/relays.css
@@ -93,57 +93,13 @@ input: focus {
 	outline: none;
 }
 #undo {
+	margin-left: 0;
 	background-color: #de810e;
-}
-.btn,
-.btn:hover,
-.btn:visited,
-.btn:focus,
-.btn:active {	color: var( --cw );
-}
-.btn {
-	display: inline-block;
-	width: 83px;
-	height: 35px;
-	margin-top: 20px;
-	font-size: 14px;
-	line-height: 34px;
-	text-align: center;
-	color: var( --cw );
-									  /* w    h       x   y   inner(color)       w    outer(color)      w */
-	background:         radial-gradient( 160% 100% at 50% -50%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
-	background: -webkit-radial-gradient( 50% -50%, 160% 200%,   hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
-									  /* x   y   w    h */
-	box-shadow: -2px 2px 3px 1px #000000;
-	text-shadow: -1px 1px 2px #000000;
-	border-radius: 4px;
-	border: none;
-	user-select: none;
-	cursor: pointer;
-}
-.btn-primary {
-	background-color: var( --cm );
-}
-.btn-primary:hover {
-	background-color: var( --cml )
-}
-.btn i {
-	font-size: 14px !important;
-	line-height: 30px;
-}
-.btn:focus,
-.btn:active {
-	color: var( --cw );
-}
-.disabled {
-	color: var( --cg60 ) !important;
-	background-color: var( --cg ) !important;
-	pointer-events: none;
 }
 #gpioimgtxt {
 	color: var( --cml );
 }
-#relaysform i {
+.column span i {
 	font-size: 20px;
 }
 .green {
