--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -156,6 +156,7 @@ whl, grl,
 #divcolor .infobtn {
 	margin: 0;
 	width: 85px;
+	box-shadow: 0 0 6px 5px #000000;
 }
 #divcolor .btn.disabled {
 	color: var( --cg60 );
